; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bntest.c_equalBN.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bntest.c_equalBN.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"unexpected %s value\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32*)* @equalBN to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @equalBN(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = call i64 @BN_cmp(i32* %8, i32* %9)
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %19

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @TEST_error(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @TEST_BN_eq(i32* %16, i32* %17)
  store i32 0, i32* %4, align 4
  br label %19

19:                                               ; preds = %13, %12
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i64 @BN_cmp(i32*, i32*) #1

declare dso_local i32 @TEST_error(i8*, i8*) #1

declare dso_local i32 @TEST_BN_eq(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
